Update `esp-hal-procmacros` and `esp-hal-smartled` packages to support H2

--- a/esp-hal-smartled/Cargo.toml
+++ b/esp-hal-smartled/Cargo.toml
@@ -18,6 +18,7 @@ smart-leds-trait = "0.2.1"
 esp32   = ["esp-hal-common/esp32"]
 esp32c3 = ["esp-hal-common/esp32c3"]
 esp32c6 = ["esp-hal-common/esp32c6"]
+esp32h2 = ["esp-hal-common/esp32h2"]
 esp32s2 = ["esp-hal-common/esp32s2"]
 esp32s3 = ["esp-hal-common/esp32s3"]
 
