New releases for all packages

--- a/esp-hal-smartled/Cargo.toml
+++ b/esp-hal-smartled/Cargo.toml
@@ -7,7 +7,7 @@ repository  = "https://github.com/esp-rs/esp-hal"
 license     = "MIT OR Apache-2.0"
 
 [dependencies]
-esp-hal-common   = { version = "0.7.1", features = [], path = "../esp-hal-common" }
+esp-hal-common   = { version = "0.8.0", path = "../esp-hal-common" }
 fugit            = "0.3.6"
 smart-leds-trait = "0.2.1"
 
