Add README, improve documentation for `esp-hal-procmacros`

--- a/esp-hal-procmacros/Cargo.toml
+++ b/esp-hal-procmacros/Cargo.toml
@@ -11,6 +11,9 @@ description  = "Procedural macros for ESP-HAL"
 repository   = "https://github.com/esp-rs/esp-hal"
 license      = "MIT OR Apache-2.0"
 
+[package.metadata.docs.rs]
+features = ["esp32c3", "interrupt", "riscv"]
+
 [lib]
 proc-macro = true
 
