--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -40,6 +40,7 @@ embedded-graphics = "0.7.1"
 esp-backtrace     = { version = "0.6.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
 esp-hal-smartled  = { version = "0.1.0", features = ["esp32"], path = "../esp-hal-smartled" }
 esp-println       = { version = "0.4.0", features = ["esp32"] }
+sha1              = { version = "0.10", default-features = false}
 sha2              = { version = "0.10.6", default-features = false}
 smart-leds        = "0.3.0"
 ssd1306           = "0.7.1"
