--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -41,6 +41,8 @@ embedded-graphics = "0.7.1"
 esp-backtrace     = { version = "0.6.0", features = ["esp32s2", "panic-handler", "print-uart", "exception-handler"] }
 esp-hal-smartled  = { version = "0.1.0", features = ["esp32s2"], path = "../esp-hal-smartled" }
 esp-println       = { version = "0.4.0", features = ["esp32s2"] }
+hmac              = { version = "0.12", default-features = false}
+sha1              = { version = "0.10", default-features = false}
 sha2              = { version = "0.10.6", default-features = false}
 smart-leds        = "0.3.0"
 ssd1306           = "0.7.1"
