--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -37,7 +37,7 @@ embassy-futures    = { version = "0.1.0", optional = true }
 
 # RISC-V
 esp-riscv-rt                = { git = 'https://github.com/onsdagens/esp-riscv-rt', branch='scaled_back', optional = true }
-riscv-atomic-emulation-trap = { path = '/home/pawel/riscv-atomic-emulation-trap', optional = true }
+riscv-atomic-emulation-trap = { git = 'https://github.com/onsdagens/riscv-atomic-emulation-trap', optional = true }
 
 # Xtensa
 xtensa-lx    = { version = "0.8.0",  optional = true }
