--- a/esp32h2-hal/Cargo.toml
+++ b/esp32h2-hal/Cargo.toml
@@ -38,7 +38,7 @@ aes               = "0.8.2"
 critical-section  = "1.1.1"
 embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
 embedded-graphics = "0.7.1"
-esp-backtrace     = { git = "https://github.com/playfulFence/esp-backtrace", version = "0.6.0", features = ["esp32h2", "panic-handler", "exception-handler", "print-uart"] }
+esp-backtrace     = { version = "0.6.0", features = ["esp32h2", "panic-handler", "exception-handler", "print-uart"] }
 esp-hal-smartled  = { version = "0.1.0", features = ["esp32h2"], path = "../esp-hal-smartled" }
 esp-println       = { version = "0.4.0", features = ["esp32h2"] }
 sha2              = { version = "0.10.6", default-features = false}
@@ -58,22 +58,3 @@ embassy              = ["esp-hal-common/embassy"]
 embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-16_000_000"]
 embassy-time-timg0   = ["esp-hal-common/embassy-time-timg0",   "embassy-time/tick-hz-1_000_000"]
 
-[[example]]
-name              = "spi_eh1_loopback"
-required-features = ["eh1"]
-
-[[example]]
-name              = "spi_eh1_device_loopback"
-required-features = ["eh1"]
-
-[[example]]
-name              = "embassy_hello_world"
-required-features = ["embassy"]
-
-[[example]]
-name              = "embassy_wait"
-required-features = ["embassy", "async"]
-
-[[example]]
-name              = "embassy_spi"
-required-features = ["embassy", "async"]
