--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,8 @@ jobs:
         run: cd esp-hal-smartled/ && cargo +nightly-2023-03-09 check --features=esp32c3
       - name: check (esp32c6)
         run: cd esp-hal-smartled/ && cargo +nightly-2023-03-09 check --features=esp32c6
+      #- name: check (esp32h2)
+      #  run: cd esp-hal-smartled/ && cargo +nightly-2023-03-09 check --features=esp3h2
       # Check all Xtensa targets:
       - name: check (esp32)
         run: cd esp-hal-smartled/ && cargo +esp check --features=esp32,esp32_40mhz
@@ -111,7 +113,7 @@ jobs:
         run: cd esp32c2-hal/ && cargo +nightly-2023-03-09 check --example=embassy_wait --features=embassy,embassy-time-systick,async
       - name: check esp32c2-hal (async, spi)
         run: cd esp32c2-hal/ && cargo +nightly-2023-03-09 check --example=embassy_spi --features=embassy,embassy-time-systick,async
-
+        
   esp32c3-hal:
     runs-on: ubuntu-latest
 
@@ -179,6 +181,39 @@ jobs:
         run: cd esp32c6-hal/ && cargo +nightly-2023-03-09 check --example=embassy_wait --features=embassy,embassy-time-systick,async
       - name: check esp32c6-hal (async, spi)
         run: cd esp32c6-hal/ && cargo +nightly-2023-03-09 check --example=embassy_spi --features=embassy,embassy-time-systick,async
+
+   esp32h2-hal:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@v1
+        with:
+          target: riscv32imac-unknown-none-elf
+          toolchain: nightly-2023-03-09
+          components: rust-src
+      - uses: Swatinem/rust-cache@v2
+
+      # Perform a full build initially to verify that the examples not only
+      # build, but also link successfully.
+      # We also use this as an opportunity to verify that the examples link
+      # for each supported image format.
+      - name: build esp32h2-hal (no features)
+        run: cd esp32h2-hal/ && cargo +nightly-2023-03-09 build --examples
+      - name: build esp32h2-hal (direct-boot)
+        run: cd esp32h2-hal/ && cargo +nightly-2023-03-09 build --examples --features=direct-boot
+      # Subsequent steps can just check the examples instead, as we're already
+      # confident that they link.
+      - name: check esp32h2-hal (common features)
+        run: cd esp32h2-hal/ && cargo +nightly-2023-03-09 check --examples --features=eh1,ufmt
+      # - name: check esp32h2-hal (async, systick)
+      #   run: cd esp32h2-hal/ && cargo +nightly-2023-03-09 check --example=embassy_hello_world --features=embassy,embassy-time-systick
+      # - name: check esp32h2-hal (async, timg0)
+      #   run: cd esp32h2-hal/ && cargo +nightly-2023-03-09 check --example=embassy_hello_world --features=embassy,embassy-time-timg0
+      # - name: check esp32h2-hal (async, gpio)
+      #   run: cd esp32h2-hal/ && cargo +nightly-2023-03-09 check --example=embassy_wait --features=embassy,embassy-time-systick,async
+      # - name: check esp32h2-hal (async, spi)
+      #   run: cd esp32h2-hal/ && cargo +nightly-2023-03-09 check --example=embassy_spi --features=embassy,embassy-time-systick,async
 
   esp32s2-hal:
     runs-on: ubuntu-latest
@@ -264,6 +299,8 @@ jobs:
         run: cd esp32c3-hal/ && cargo check --features=eh1,ufmt
       - name: msrv (esp32c6-hal)
         run: cd esp32c6-hal/ && cargo check --features=eh1,ufmt
+      - name: msrv (esp32h2-hal)
+        run: cd esp32h2-hal/ && cargo check --features=eh1,ufmt
 
   msrv-xtensa:
     runs-on: ubuntu-latest
@@ -305,6 +342,8 @@ jobs:
         run: cargo +stable clippy --manifest-path=esp32c3-hal/Cargo.toml -- --no-deps
       - name: clippy (esp32c6-hal)
         run: cargo +stable clippy --manifest-path=esp32c6-hal/Cargo.toml -- --no-deps
+      - name: clippy (esp32h2-hal)
+        run: cargo +stable clippy --manifest-path=esp32h2-hal/Cargo.toml -- --no-deps
 
   clippy-xtensa:
     runs-on: ubuntu-latest
@@ -357,6 +396,8 @@ jobs:
         run: cargo fmt --all --manifest-path=esp32c3-hal/Cargo.toml -- --check
       - name: rustfmt (esp32c6-hal)
         run: cargo fmt --all --manifest-path=esp32c6-hal/Cargo.toml -- --check
+      - name: rustfmt (esp32h2-hal)
+        run: cargo fmt --all --manifest-path=esp32h2-hal/Cargo.toml -- --check
       - name: rustfmt (esp32s2-hal)
         run: cargo fmt --all --manifest-path=esp32s2-hal/Cargo.toml -- --check
       - name: rustfmt (esp32s3-hal)
