--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -61,6 +61,7 @@ async                = ["esp-hal-common/async", "embedded-hal-async"]
 embassy              = ["esp-hal-common/embassy"]
 embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-16_000_000"]
 embassy-time-timg0 = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
+interrupt-preemption = ["esp-hal-common/interrupt-preemption"]
 
 [[example]]
 name              = "spi_eh1_loopback"
@@ -77,6 +78,10 @@ required-features = ["embassy"]
 [[example]]
 name              = "embassy_wait"
 required-features = ["embassy", "async"]
+
+[[example]]
+name = "interrupt_preemption"
+required-features = ["interrupt-preemption"]
 
 [profile.dev]
 opt-level = 1
