--- a/esp32c6-hal/Cargo.toml
+++ b/esp32c6-hal/Cargo.toml
@@ -27,10 +27,10 @@ categories = [
 
 [dependencies]
 cfg-if             = "1.0.0"
-embassy-time       = { version = "0.1.0", features = ["nightly"], optional = true }
+embassy-time       = { version = "0.1.1", features = ["nightly"], optional = true }
 embedded-hal       = { version = "0.2.7", features = ["unproven"] }
 embedded-hal-1     = { version = "=1.0.0-alpha.10", optional = true, package = "embedded-hal" }
-embedded-hal-async = { version = "0.2.0-alpha.0", optional = true }
+embedded-hal-async = { version = "0.2.0-alpha.1", optional = true }
 embedded-hal-nb    = { version = "=1.0.0-alpha.2", optional = true }
 embedded-can       = { version = "0.4.1", optional = true }
 esp-hal-common     = { version = "0.8.0",  features = ["esp32c6"], path = "../esp-hal-common" }
@@ -38,17 +38,16 @@ esp-hal-common     = { version = "0.8.0",  features = ["esp32c6"], path = "../es
 [dev-dependencies]
 aes               = "0.8.2"
 critical-section  = "1.1.1"
+crypto-bigint     = {version = "0.5.1",default-features = false}
 embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
 embedded-graphics = "0.7.1"
-esp-backtrace     = { version = "0.6.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart"] }
+esp-backtrace     = { version = "0.7.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart"] }
 esp-hal-smartled  = { version = "0.1.0", features = ["esp32c6"], path = "../esp-hal-smartled" }
-esp-println       = { version = "0.4.0", features = ["esp32c6"] }
+esp-println       = { version = "0.5.0", features = ["esp32c6"] }
 sha2              = { version = "0.10.6", default-features = false}
 smart-leds        = "0.3.0"
 ssd1306           = "0.7.1"
 static_cell       = "1.0.0"
-crypto-bigint = {version = "0.5.0-pre.3",default-features = false}
-
 
 [features]
 default              = ["rt", "vectored", "esp-hal-common/rv-zero-rtc-bss"]
