--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -37,7 +37,6 @@ xtensa-atomic-emulation-trap = { version = "0.4.0" }
 aes               = "0.8.2"
 critical-section  = "1.1.1"
 crypto-bigint     = {version = "0.5.1",default-features = false}
-embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
 embedded-graphics = "0.7.1"
 esp-backtrace     = { version = "0.7.0", features = ["esp32s2", "panic-handler", "print-uart", "exception-handler"] }
 esp-hal-smartled  = { version = "0.1.0", features = ["esp32s2"], path = "../esp-hal-smartled" }
@@ -48,6 +47,12 @@ ssd1306           = "0.7.1"
 static_cell       = "1.0.0"
 usb-device        = { version = "0.2.9" }
 usbd-serial       = "0.1.1"
+
+[dev-dependencies.embassy-executor]
+package  = "embassy-executor"
+git      = "https://github.com/embassy-rs/embassy/"
+rev      = "fb27594"
+features = ["nightly", "integrated-timers", "arch-xtensa", "executor-thread"]
 
 [features]
 default   = ["rt", "vectored"]
