--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -39,7 +39,6 @@ r0                 = { version = "1.0.0",  optional = true }
 aes               = "0.8.2"
 critical-section  = "1.1.1"
 crypto-bigint     = {version = "0.5.1",default-features = false}
-embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
 embedded-graphics = "0.7.1"
 esp-backtrace     = { version = "0.7.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
 esp-hal-smartled  = { version = "0.1.0", features = ["esp32s3"], path = "../esp-hal-smartled" }
@@ -50,6 +49,12 @@ ssd1306           = "0.7.1"
 static_cell       = "1.0.0"
 usb-device        = "0.2.9"
 usbd-serial       = "0.1.1"
+
+[dev-dependencies.embassy-executor]
+package  = "embassy-executor"
+git      = "https://github.com/embassy-rs/embassy/"
+rev      = "fb27594"
+features = ["nightly", "integrated-timers", "arch-xtensa", "executor-thread"]
 
 [features]
 default              = ["rt", "vectored"]
