Update `UART` driver to add H2 support

--- a/esp-hal-common/devices/esp32h2.toml
+++ b/esp-hal-common/devices/esp32h2.toml
@@ -53,8 +53,8 @@ peripherals = [
     # "timg1",
     # "trace",
     # "twai0",
-    # "uart0",
-    # "uart1",
+    "uart0",
+    "uart1",
     # "uhci0",
     # "usb_device",
 
