Update `TIMG` driver to add H2 support

--- a/esp-hal-common/devices/esp32h2.toml
+++ b/esp-hal-common/devices/esp32h2.toml
@@ -49,8 +49,8 @@ peripherals = [
     # "spi2",
     "systimer",
     # "tee",
-    # "timg0",
-    # "timg1",
+    "timg0",
+    "timg1",
     # "trace",
     # "twai0",
     "uart0",
