--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -22,6 +22,7 @@ embedded-hal-1       = { version = "=1.0.0-alpha.10", optional = true, package =
 embedded-hal-nb      = { version = "=1.0.0-alpha.2", optional = true }
 esp-synopsys-usb-otg = { version = "0.3.1", optional = true, features = ["fs", "esp32sx"] }
 fugit                = "0.3.6"
+log                  = "0.4.17"
 lock_api             = { version = "0.4.9", optional = true }
 nb                   = "1.1.0"
 paste                = "1.0.12"
