--- a/esp-hal-common/devices/esp32.toml
+++ b/esp-hal-common/devices/esp32.toml
@@ -56,6 +56,7 @@ peripherals = [
     "phy",
     "bt",
     "wifi",
+    "psram",
 
     # Wakeup SOC based on ESP-IDF:
     "pm_support_ext0_wakeup",
