--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -38,9 +38,10 @@ critical-section  = "1.1.1"
 crypto-bigint     = { version = "0.5.2", default-features = false}
 embassy-executor  = { version = "0.2.0", features = ["nightly", "integrated-timers", "arch-xtensa", "executor-thread"] }
 embedded-graphics = "0.7.1"
+esp-alloc         = "0.3.0"
 esp-backtrace     = { version = "0.7.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
 esp-hal-smartled  = { version = "0.2.0", features = ["esp32"], path = "../esp-hal-smartled" }
-esp-println       = { version = "0.5.0", features = ["esp32"] }
+esp-println       = { version = "0.5.0", features = ["esp32", "log"] }
 sha2              = { version = "0.10.6", default-features = false}
 smart-leds        = "0.3.0"
 ssd1306           = "0.7.1"
@@ -58,6 +59,11 @@ embassy            = ["esp-hal-common/embassy"]
 embassy-time-timg0 = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
 xtal40mhz          = ["esp-hal-common/esp32_40mhz"]
 xtal26mhz          = ["esp-hal-common/esp32_26mhz"]
+
+psram     = []
+psram_2m  = ["esp-hal-common/psram_2m", "psram"]
+psram_4m  = ["esp-hal-common/psram_4m", "psram"]
+psram_8m  = ["esp-hal-common/psram_8m", "psram"]
 
 [[example]]
 name              = "spi_eh1_loopback"
@@ -78,3 +84,7 @@ required-features = ["embassy", "async"]
 [[example]]
 name              = "embassy_spi"
 required-features = ["embassy", "async"]
+
+[[example]]
+name              = "psram"
+required-features = ["psram_2m"]
