--- a/esp32c2-hal/Cargo.toml
+++ b/esp32c2-hal/Cargo.toml
@@ -37,6 +37,7 @@ critical-section  = "1.1.1"
 embedded-graphics = "0.7.1"
 esp-backtrace     = { version = "0.7.0", features = ["esp32c2", "panic-handler", "exception-handler", "print-uart"] }
 esp-println       = { version = "0.5.0", features = ["esp32c2"] }
+lis3dh            = "0.4.2"
 sha2              = { version = "0.10.6", default-features = false}
 static_cell       = "1.0.0"
 
