--- a/esp32c6-hal/Cargo.toml
+++ b/esp32c6-hal/Cargo.toml
@@ -43,6 +43,7 @@ embedded-graphics = "0.7.1"
 esp-backtrace     = { version = "0.7.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart"] }
 esp-hal-smartled  = { version = "0.1.0", features = ["esp32c6"], path = "../esp-hal-smartled" }
 esp-println       = { version = "0.5.0", features = ["esp32c6"] }
+lis3dh            = "0.4.2"
 sha2              = { version = "0.10.6", default-features = false}
 smart-leds        = "0.3.0"
 static_cell       = "1.0.0"
