--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -44,6 +44,7 @@ esp-backtrace     = { version = "0.7.0", features = ["esp32s3", "panic-handler",
 esp-hal-smartled  = { version = "0.1.0", features = ["esp32s3"], path = "../esp-hal-smartled" }
 esp-println       = { version = "0.5.0", features = ["esp32s3"] }
 sha2              = { version = "0.10.6", default-features = false}
+lis3dh            = "0.4.2"
 smart-leds        = "0.3.0"
 static_cell       = "1.0.0"
 usb-device        = "0.2.9"
