Add ESP32-H2 support for `TIMG` and `UART` (#500)
* Begin working on `PeripheralClockControl` for the ESP32-H2

* Update `UART` driver to add H2 support

* Update `TIMG` driver to add H2 support

* Update the hello_world example to use `TIMG` and `UART`

--- a/esp-hal-common/devices/esp32h2.toml
+++ b/esp-hal-common/devices/esp32h2.toml
@@ -49,12 +49,12 @@ peripherals = [
     # "spi2",
     "systimer",
     # "tee",
-    # "timg0",
-    # "timg1",
+    "timg0",
+    "timg1",
     # "trace",
     # "twai0",
-    # "uart0",
-    # "uart1",
+    "uart0",
+    "uart1",
     # "uhci0",
     # "usb_device",
 
