--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -90,6 +90,9 @@ opt-level = 1
 name              = "embassy_spi"
 required-features = ["embassy", "async"]
 
+[[example]]
+name              = "embassy_serial"
+required-features = ["embassy", "async"]
 
 [profile.release]
 debug = true
