ESP32-S3: Initial PSRAM Support

--- a/esp-hal-common/devices/esp32s3.toml
+++ b/esp-hal-common/devices/esp32s3.toml
@@ -65,6 +65,7 @@ peripherals = [
     "phy",
     "bt",
     "wifi",
+    "psram",
 
     # Wakeup SOC based on ESP-IDF:
     "pm_support_ext0_wakeup",
