Update the `GDMA` driver to support the ESP32-H2

--- a/esp-hal-common/devices/esp32h2.toml
+++ b/esp-hal-common/devices/esp32h2.toml
@@ -7,10 +7,10 @@ peripherals = [
     "aes",
     "apb_saradc",
     "assist_debug",
+    "dma",
     # "ds",
     # "ecc",
     "efuse",
-    # "gdma",
     "gpio",
     # "hmac",
     # "hp_apm",
@@ -44,9 +44,9 @@ peripherals = [
     "rsa",
     "sha",
     # "soc_etm",
-    # "spi0",
-    # "spi1",
-    # "spi2",
+    "spi0",
+    "spi1",
+    "spi2",
     "systimer",
     # "tee",
     "timg0",
@@ -62,5 +62,6 @@ peripherals = [
     "adc",
     "assist_debug_sp_monitor",
     "assist_debug_region_monitor",
+    "gdma",
     "plic",
 ]
