feat: ✨ Initial support for AES

--- a/esp-hal-common/devices/esp32h2.toml
+++ b/esp-hal-common/devices/esp32h2.toml
@@ -4,7 +4,7 @@ cores = "single_core"
 
 peripherals = [
     # Peripherals available in the PAC:
-    # "aes",
+    "aes",
     "apb_saradc",
     # "assist_debug",
     # "ds",
