feat: ✨ Enable PCNT peripheral

--- a/esp-hal-common/devices/esp32h2.toml
+++ b/esp-hal-common/devices/esp32h2.toml
@@ -36,7 +36,7 @@ peripherals = [
     # "otp_debug",
     # "parl_io",
     # "pau",
-    # "pcnt",
+    "pcnt",
     "pcr",
     # "pmu",
     # "rmt",
