Activate embedded-svc with wifi feature

--- a/esp-wifi/Cargo.toml
+++ b/esp-wifi/Cargo.toml
@@ -61,11 +61,11 @@ dump-packets = []
 utils = [ "dep:smoltcp" ]
 enumset = []
 embedded-svc = [ "dep:enumset", "dep:embedded-svc", "utils" ]
-wifi = [ ]
+wifi = [ "embedded-svc" ]
 ble = [ "esp32-hal?/bluetooth" ]
 phy-enable-usb = []
 ps-min-modem = []
-esp-now = [ "wifi", "embedded-svc" ]
+esp-now = [ "wifi" ]
 big-heap = []
 mtu-1514 = []
 mtu-1500 = []
