H2: Add initial LEDC support with example

--- a/esp-hal-common/devices/esp32h2.toml
+++ b/esp-hal-common/devices/esp32h2.toml
@@ -21,7 +21,7 @@ peripherals = [
     "interrupt_core0",
     "intpri",
     "io_mux",
-    # "ledc",
+    "ledc",
     # "lp_ana",
     # "lp_aon",
     # "lp_apm",
