feat: ✨ Enable peripherals

--- a/esp-hal-common/devices/esp32h2.toml
+++ b/esp-hal-common/devices/esp32h2.toml
@@ -6,7 +6,7 @@ peripherals = [
     # Peripherals available in the PAC:
     "aes",
     "apb_saradc",
-    # "assist_debug",
+    "assist_debug",
     # "ds",
     # "ecc",
     "efuse",
@@ -30,7 +30,7 @@ peripherals = [
     # "lp_timer",
     "lp_wdt",
     "mcpwm0",
-    # "mem_monitor",
+    "mem_monitor",
     # "modem_lpcon",
     # "modem_syscon",
     # "otp_debug",
@@ -57,6 +57,8 @@ peripherals = [
     "uart1",
     # "uhci0",
     "usb_device",
+    "assist_debug_sp_monitor",
+    "assist_debug_region_monitor",
 
     # Additional peripherals defined by us (the developers):
     "adc",
