Initial support for ASSIST_DEBUG in ESP32-H2 (#566)
* feat: ✨ Add debug_assist example

* feat: ✨ Enable peripherals

* docs: 📝 Add RAM comments

* feat: ⚡️ Update debug_assist example

* docs: 📝 Update changelog

* build: 📌 Update esp-pacs rev for h2

* style: 🎨 Move assist_debug_region* and assist_debug_sp* to peripherals defined by developers

--- a/esp-hal-common/devices/esp32h2.toml
+++ b/esp-hal-common/devices/esp32h2.toml
@@ -6,7 +6,7 @@ peripherals = [
     # Peripherals available in the PAC:
     "aes",
     "apb_saradc",
-    # "assist_debug",
+    "assist_debug",
     # "ds",
     # "ecc",
     "efuse",
@@ -30,7 +30,7 @@ peripherals = [
     # "lp_timer",
     "lp_wdt",
     "mcpwm0",
-    # "mem_monitor",
+    "mem_monitor",
     # "modem_lpcon",
     # "modem_syscon",
     # "otp_debug",
@@ -60,5 +60,7 @@ peripherals = [
 
     # Additional peripherals defined by us (the developers):
     "adc",
+    "assist_debug_sp_monitor",
+    "assist_debug_region_monitor",
     "plic",
 ]
