Add initial implementation of radio clocks for ESP32-H2

--- a/esp-hal-common/devices/esp32h2.toml
+++ b/esp-hal-common/devices/esp32h2.toml
@@ -31,14 +31,14 @@ peripherals = [
     "lp_wdt",
     "mcpwm0",
     "mem_monitor",
-    # "modem_lpcon",
-    # "modem_syscon",
+    "modem_lpcon",
+    "modem_syscon",
     # "otp_debug",
     # "parl_io",
     # "pau",
     "pcnt",
     "pcr",
-    # "pmu",
+    "pmu",
     "rmt",
     # "rng",
     "rsa",
@@ -64,4 +64,8 @@ peripherals = [
     "assist_debug_region_monitor",
     "gdma",
     "plic",
+    "radio",
+    "phy",
+    "bt",
+    "ieee802154",
 ]
