--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -38,7 +38,7 @@ embassy-time       = { version = "0.1.1", features = ["nightly"], optional = tru
 embassy-futures    = { version = "0.1.0", optional = true }
 
 # RISC-V
-esp-riscv-rt                = { version = "0.3.0", optional = true }
+esp-riscv-rt                = { version = "0.3.0", path = "../esp-riscv-rt", optional = true }
 riscv-atomic-emulation-trap = { version = "0.4.0", optional = true }
 
 # Xtensa
